include/ceed-impl.h

typedef struct CeedObject_private {
  Ceed ceed;
  int (*View)(CeedObject, FILE *);
  int (*Destroy)(CeedObject *);
  int     ref_count;
  CeedInt num_view_tabs;
} CeedObject_private;
// NOLINTEND(clang-analyzer-optin.performance.Padding)

/**
  @brief Return value of `CEED_DEBUG` environment variable

  @note This macro is to override the non-inlined version when `ceed-impl.h` is included

  @param[in] ceed `Ceed` context

  @return Boolean value: true  - debugging mode enabled
                         false - debugging mode disabled

  @ref Backend
**/
#define CeedDebugFlag(ceed) (ceed->ceed_env_EnableDebug.value)
struct CeedTensorContract_private {
  CeedObject_private obj;
  int (*Apply)(CeedTensorContract, CeedInt, CeedInt, CeedInt, CeedInt, const CeedScalar *restrict, CeedTransposeMode, const CeedInt,
               const CeedScalar *restrict, CeedScalar *restrict);
  int (*Destroy)(CeedTensorContract);
  void *data;
};
struct CeedQFunctionAssemblyData_private {
  Ceed                ceed;
  int                 ref_count;
  bool                is_setup;
  bool                reuse_data;
  bool                needs_data_update;
  bool                is_block_assembling;
  CeedVector          vec;
  CeedElemRestriction rstr;
};
struct CeedOperatorAssemblyData_private {
  Ceed                 ceed;
  CeedInt              num_active_bases_in, num_active_bases_out;
  CeedBasis           *active_bases_in, *active_bases_out;
  CeedElemRestriction *active_elem_rstrs_in, *active_elem_rstrs_out;
  CeedInt             *num_eval_modes_in, *num_eval_modes_out;
  CeedEvalMode       **eval_modes_in, **eval_modes_out;
  CeedScalar         **assembled_bases_in, **assembled_bases_out;
  CeedSize           **eval_mode_offsets_in, **eval_mode_offsets_out, num_output_components;
};