julia/LibCEED.jl/src/generated/libceed_bindings.jl


function CeedOperatorGetContextCeedByteRead(op, field_label, num_values, values)
    ccall((:CeedOperatorGetContextCeedByteRead, libceed), Cint, (CeedOperator, CeedContextFieldLabel, Ptr{Csize_t}, Ptr{Ptr{Cchar}}), op, field_label, num_values, values)
end

function CeedOperatorRestoreContextCeedByteRead(op, field_label, values)
    ccall((:CeedOperatorRestoreContextCeedByteRead, libceed), Cint, (CeedOperator, CeedContextFieldLabel, Ptr{Ptr{Cchar}}), op, field_label, values)
end

function CeedOperatorSetContextCeedScalar(op, field_label, values)
    ccall((:CeedOperatorSetContextCeedScalar, libceed), Cint, (CeedOperator, CeedContextFieldLabel, Ptr{CeedScalar}), op, field_label, values)
end

function CeedOperatorGetContextCeedScalarRead(op, field_label, num_values, values)
    ccall((:CeedOperatorGetContextCeedScalarRead, libceed), Cint, (CeedOperator, CeedContextFieldLabel, Ptr{Csize_t}, Ptr{Ptr{CeedScalar}}), op, field_label, num_values, values)
end

function CeedOperatorRestoreContextCeedScalarRead(op, field_label, values)
    ccall((:CeedOperatorRestoreContextCeedScalarRead, libceed), Cint, (CeedOperator, CeedContextFieldLabel, Ptr{Ptr{CeedScalar}}), op, field_label, values)
end

function CeedOperatorSetContextCeedFloat(op, field_label, values)
    ccall((:CeedOperatorSetContextCeedFloat, libceed), Cint, (CeedOperator, CeedContextFieldLabel, Ptr{Cfloat}), op, field_label, values)
end

function CeedOperatorGetContextCeedFloatRead(op, field_label, num_values, values)
    ccall((:CeedOperatorGetContextCeedFloatRead, libceed), Cint, (CeedOperator, CeedContextFieldLabel, Ptr{Csize_t}, Ptr{Ptr{Cfloat}}), op, field_label, num_values, values)
end

function CeedOperatorRestoreContextCeedFloatRead(op, field_label, values)
    ccall((:CeedOperatorRestoreContextCeedFloatRead, libceed), Cint, (CeedOperator, CeedContextFieldLabel, Ptr{Ptr{Cfloat}}), op, field_label, values)
end

function CeedOperatorSetContextCeedDouble(op, field_label, values)
    ccall((:CeedOperatorSetContextCeedDouble, libceed), Cint, (CeedOperator, CeedContextFieldLabel, Ptr{Cdouble}), op, field_label, values)
end

function CeedOperatorGetContextCeedDoubleRead(op, field_label, num_values, values)
    ccall((:CeedOperatorGetContextCeedDoubleRead, libceed), Cint, (CeedOperator, CeedContextFieldLabel, Ptr{Csize_t}, Ptr{Ptr{Cdouble}}), op, field_label, num_values, values)
end

function CeedOperatorRestoreContextCeedDoubleRead(op, field_label, values)
    ccall((:CeedOperatorRestoreContextCeedDoubleRead, libceed), Cint, (CeedOperator, CeedContextFieldLabel, Ptr{Ptr{Cdouble}}), op, field_label, values)
end

function CeedOperatorSetContextCeedInt8(op, field_label, values)
    ccall((:CeedOperatorSetContextCeedInt8, libceed), Cint, (CeedOperator, CeedContextFieldLabel, Ptr{CeedInt8}), op, field_label, values)
end

function CeedOperatorGetContextCeedInt8Read(op, field_label, num_values, values)
    ccall((:CeedOperatorGetContextCeedInt8Read, libceed), Cint, (CeedOperator, CeedContextFieldLabel, Ptr{Csize_t}, Ptr{Ptr{CeedInt8}}), op, field_label, num_values, values)
end

function CeedOperatorRestoreContextCeedInt8Read(op, field_label, values)
    ccall((:CeedOperatorRestoreContextCeedInt8Read, libceed), Cint, (CeedOperator, CeedContextFieldLabel, Ptr{Ptr{CeedInt8}}), op, field_label, values)
end

function CeedOperatorSetContextCeedInt(op, field_label, values)
    ccall((:CeedOperatorSetContextCeedInt, libceed), Cint, (CeedOperator, CeedContextFieldLabel, Ptr{CeedInt}), op, field_label, values)
end

function CeedOperatorGetContextCeedIntRead(op, field_label, num_values, values)
    ccall((:CeedOperatorGetContextCeedIntRead, libceed), Cint, (CeedOperator, CeedContextFieldLabel, Ptr{Csize_t}, Ptr{Ptr{CeedInt}}), op, field_label, num_values, values)
end

function CeedOperatorRestoreContextCeedIntRead(op, field_label, values)
    ccall((:CeedOperatorRestoreContextCeedIntRead, libceed), Cint, (CeedOperator, CeedContextFieldLabel, Ptr{Ptr{CeedInt}}), op, field_label, values)
end

function CeedOperatorSetContextCeedInt32(op, field_label, values)
    ccall((:CeedOperatorSetContextCeedInt32, libceed), Cint, (CeedOperator, CeedContextFieldLabel, Ptr{Int32}), op, field_label, values)
end

function CeedOperatorGetContextCeedInt32Read(op, field_label, num_values, values)
    ccall((:CeedOperatorGetContextCeedInt32Read, libceed), Cint, (CeedOperator, CeedContextFieldLabel, Ptr{Csize_t}, Ptr{Ptr{Int32}}), op, field_label, num_values, values)
end

function CeedOperatorRestoreContextCeedInt32Read(op, field_label, values)
    ccall((:CeedOperatorRestoreContextCeedInt32Read, libceed), Cint, (CeedOperator, CeedContextFieldLabel, Ptr{Ptr{Int32}}), op, field_label, values)
end

function CeedOperatorSetContextCeedInt64(op, field_label, values)
    ccall((:CeedOperatorSetContextCeedInt64, libceed), Cint, (CeedOperator, CeedContextFieldLabel, Ptr{Int64}), op, field_label, values)
end

function CeedOperatorGetContextCeedInt64Read(op, field_label, num_values, values)
    ccall((:CeedOperatorGetContextCeedInt64Read, libceed), Cint, (CeedOperator, CeedContextFieldLabel, Ptr{Csize_t}, Ptr{Ptr{Int64}}), op, field_label, num_values, values)
end

function CeedOperatorRestoreContextCeedInt64Read(op, field_label, values)
    ccall((:CeedOperatorRestoreContextCeedInt64Read, libceed), Cint, (CeedOperator, CeedContextFieldLabel, Ptr{Ptr{Int64}}), op, field_label, values)
end

function CeedOperatorSetContextCeedSize(op, field_label, values)
    ccall((:CeedOperatorSetContextCeedSize, libceed), Cint, (CeedOperator, CeedContextFieldLabel, Ptr{CeedSize}), op, field_label, values)
end

function CeedOperatorGetContextCeedSizeRead(op, field_label, num_values, values)
    ccall((:CeedOperatorGetContextCeedSizeRead, libceed), Cint, (CeedOperator, CeedContextFieldLabel, Ptr{Csize_t}, Ptr{Ptr{CeedSize}}), op, field_label, num_values, values)
end

function CeedOperatorRestoreContextCeedSizeRead(op, field_label, values)
    ccall((:CeedOperatorRestoreContextCeedSizeRead, libceed), Cint, (CeedOperator, CeedContextFieldLabel, Ptr{Ptr{CeedSize}}), op, field_label, values)
end

function CeedOperatorSetContextCeedBoolean(op, field_label, values)
    ccall((:CeedOperatorSetContextCeedBoolean, libceed), Cint, (CeedOperator, CeedContextFieldLabel, Ptr{Bool}), op, field_label, values)
end

function CeedOperatorGetContextCeedBooleanRead(op, field_label, num_values, values)
    ccall((:CeedOperatorGetContextCeedBooleanRead, libceed), Cint, (CeedOperator, CeedContextFieldLabel, Ptr{Csize_t}, Ptr{Ptr{Bool}}), op, field_label, num_values, values)
end

function CeedOperatorRestoreContextCeedBooleanRead(op, field_label, values)
    ccall((:CeedOperatorRestoreContextCeedBooleanRead, libceed), Cint, (CeedOperator, CeedContextFieldLabel, Ptr{Ptr{Bool}}), op, field_label, values)
end

function CeedOperatorApply(op, in, out, request)
    ccall((:CeedOperatorApply, libceed), Cint, (CeedOperator, CeedVector, CeedVector, Ptr{CeedRequest}), op, in, out, request)
end

function CeedOperatorApplyAdd(op, in, out, request)
    ccall((:CeedOperatorApplyAdd, libceed), Cint, (CeedOperator, CeedVector, CeedVector, Ptr{CeedRequest}), op, in, out, request)
end

function CeedOperatorApplyAddActive(op, in, out, request)
    ccall((:CeedOperatorApplyAddActive, libceed), Cint, (CeedOperator, CeedVector, CeedVector, Ptr{CeedRequest}), op, in, out, request)
end

function CeedOperatorAssemblyDataStrip(op)
    ccall((:CeedOperatorAssemblyDataStrip, libceed), Cint, (CeedOperator,), op)
end

function CeedOperatorDestroy(op)
    ccall((:CeedOperatorDestroy, libceed), Cint, (Ptr{CeedOperator},), op)
end

function CeedCompositeOperatorCreate(a, b)
    ccall((:CeedCompositeOperatorCreate, libceed), Cint, (Ceed, Ptr{CeedOperator}), a, b)
end

function CeedCompositeOperatorAddSub(a, b)
    ccall((:CeedCompositeOperatorAddSub, libceed), Cint, (CeedOperator, CeedOperator), a, b)
end

function CeedCompositeOperatorGetNumSub(a, b)
    ccall((:CeedCompositeOperatorGetNumSub, libceed), Cint, (CeedOperator, Ptr{CeedInt}), a, b)
end

function CeedCompositeOperatorGetSubList(a, b)
    ccall((:CeedCompositeOperatorGetSubList, libceed), Cint, (CeedOperator, Ptr{Ptr{CeedOperator}}), a, b)
end

function CeedCompositeOperatorGetSubByName(a, b, c)
    ccall((:CeedCompositeOperatorGetSubByName, libceed), Cint, (CeedOperator, Ptr{Cchar}, Ptr{CeedOperator}), a, b, c)
end

function CeedCompositeOperatorGetMultiplicity(a, b, c, d)
    ccall((:CeedCompositeOperatorGetMultiplicity, libceed), Cint, (CeedOperator, CeedInt, Ptr{CeedInt}, CeedVector), a, b, c, d)
end

function CeedOperatorGetFieldByName(op, field_name, op_field)
    ccall((:CeedOperatorGetFieldByName, libceed), Cint, (CeedOperator, Ptr{Cchar}, Ptr{CeedOperatorField}), op, field_name, op_field)
end

function CeedOperatorFieldGetName(op_field, field_name)
    ccall((:CeedOperatorFieldGetName, libceed), Cint, (CeedOperatorField, Ptr{Ptr{Cchar}}), op_field, field_name)
end

function CeedOperatorFieldGetElemRestriction(op_field, rstr)
    ccall((:CeedOperatorFieldGetElemRestriction, libceed), Cint, (CeedOperatorField, Ptr{CeedElemRestriction}), op_field, rstr)
end

function CeedOperatorFieldGetBasis(op_field, basis)
    ccall((:CeedOperatorFieldGetBasis, libceed), Cint, (CeedOperatorField, Ptr{CeedBasis}), op_field, basis)
end

function CeedOperatorFieldGetVector(op_field, vec)
    ccall((:CeedOperatorFieldGetVector, libceed), Cint, (CeedOperatorField, Ptr{CeedVector}), op_field, vec)
end

function CeedOperatorFieldGetData(op_field, field_name, rstr, basis, vec)
    ccall((:CeedOperatorFieldGetData, libceed), Cint, (CeedOperatorField, Ptr{Ptr{Cchar}}, Ptr{CeedElemRestriction}, Ptr{CeedBasis}, Ptr{CeedVector}), op_field, field_name, rstr, basis, vec)
end

function CeedIntPow(base, power)
    ccall((:CeedIntPow, libceed), CeedInt, (CeedInt, CeedInt), base, power)
end

function CeedIntMin(a, b)
    ccall((:CeedIntMin, libceed), CeedInt, (CeedInt, CeedInt), a, b)
end

function CeedIntMax(a, b)
    ccall((:CeedIntMax, libceed), CeedInt, (CeedInt, CeedInt), a, b)
end

function CeedRegisterAll()
    ccall((:CeedRegisterAll, libceed), Cint, ())
end

function CeedQFunctionRegisterAll()
    ccall((:CeedQFunctionRegisterAll, libceed), Cint, ())
end

function CeedQFunctionSetCUDAUserFunction(qf, f)
    ccall((:CeedQFunctionSetCUDAUserFunction, libceed), Cint, (CeedQFunction, Cint), qf, f)
end

function CeedDebugFlag(ceed)
    ccall((:CeedDebugFlag, libceed), Bool, (Ceed,), ceed)
end

function CeedDebugFlagEnv()
    ccall((:CeedDebugFlagEnv, libceed), Bool, ())
end

function CeedMallocArray(n, unit, p)
    ccall((:CeedMallocArray, libceed), Cint, (Csize_t, Csize_t, Ptr{Cvoid}), n, unit, p)
end

function CeedCallocArray(n, unit, p)
    ccall((:CeedCallocArray, libceed), Cint, (Csize_t, Csize_t, Ptr{Cvoid}), n, unit, p)
end

function CeedReallocArray(n, unit, p)
    ccall((:CeedReallocArray, libceed), Cint, (Csize_t, Csize_t, Ptr{Cvoid}), n, unit, p)
end

function CeedSetBackendFunctionImpl(ceed, type, object, func_name, f)
    ccall((:CeedSetBackendFunctionImpl, libceed), Cint, (Ceed, Ptr{Cchar}, Ptr{Cvoid}, Ptr{Cchar}, Ptr{Cvoid}), ceed, type, object, func_name, f)
end

@cenum CeedDebugColor::UInt32 begin
    CEED_DEBUG_COLOR_SUCCESS = 108
    CEED_DEBUG_COLOR_WARNING = 208
    CEED_DEBUG_COLOR_ERROR = 196
    CEED_DEBUG_COLOR_NONE = 255
end

mutable struct CeedTensorContract_private end

const CeedTensorContract = Ptr{CeedTensorContract_private}

mutable struct CeedQFunctionAssemblyData_private end

const CeedQFunctionAssemblyData = Ptr{CeedQFunctionAssemblyData_private}

mutable struct CeedOperatorAssemblyData_private end

const CeedOperatorAssemblyData = Ptr{CeedOperatorAssemblyData_private}

function CeedStringAllocCopy(source, copy)
    ccall((:CeedStringAllocCopy, libceed), Cint, (Ptr{Cchar}, Ptr{Ptr{Cchar}}), source, copy)
end

function CeedFree(p)
    ccall((:CeedFree, libceed), Cint, (Ptr{Cvoid},), p)
end
